--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^2.3.1
   smooth_star_rating: ^1.1.1
   flutter_swiper: ^1.1.6
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
