--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   smooth_star_rating: ^1.1.1
   flutter_swiper: ^1.1.6
   intl: ^0.16.1
+  hive: ^1.4.4
+  hive_flutter: ^0.3.1
+  path_provider: ^1.6.14  
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +45,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^0.7.1
+  build_runner:
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
