--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,12 @@ dependencies:
   intl: ^0.16.1
   hive: ^1.4.4
   hive_flutter: ^0.3.1
-  path_provider: ^1.6.14  
+  path_provider: ^1.6.14
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
+  flutter_facebook_auth: "^0.2.3"
+  shared_preferences: ^0.5.10
+  fluttertoast: ^7.1.1    
 
 
 
@@ -64,6 +69,9 @@ flutter:
   assets:
     - icons/Brand.png 
     - images/emptycart.png
+    - icons/Email.png
+    - icons/Facebook.png
+    - icons/Google.png    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -87,6 +95,9 @@ flutter:
     - family : ResultPageIcons
       fonts:
         - asset: icons/ResultPageIcons.ttf
+    - family:  ProfileTabIcons
+      fonts:
+        - asset: icons/ProfileTabIcons.ttf
         
   # Fonts
     - family : BalsamiqSans
