--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   firebase_auth: ^0.18.0+1
   flutter_facebook_auth: "^0.2.3"
   shared_preferences: ^0.5.10
-  fluttertoast: ^7.1.1    
-
+  fluttertoast: ^7.1.1
+  percent_indicator: ^2.1.6    
+  flutter_rating_bar: ^3.0.1+1
 
 
   # The following adds the Cupertino Icons font to your application.
