--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,10 @@ dependencies:
   shared_preferences: ^0.5.10
   fluttertoast: ^7.1.1
   percent_indicator: ^2.1.6    
-  flutter_rating_bar: ^3.0.1+1
-
+  flutter_rating_bar: ^3.0.1+1 
+  flare_flutter: ^2.0.6
+  flutter_page_indicator:   
+  carousel_slider: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -68,6 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - animations/
     - icons/Brand.png 
     - images/emptycart.png
     - icons/Email.png
@@ -87,7 +90,6 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-
   # Icons
     - family : BottomNavIcons
       fonts:
@@ -104,6 +106,19 @@ flutter:
     - family : BalsamiqSans
       fonts:
         - asset: fonts/BalsamiqSans.ttf
+
+    - family: Cabin
+      fonts:
+        - asset: fonts/Cabin-Regular.ttf
+        - asset: fonts/Cabin-Bold.ttf
+        - asset: fonts/Cabin-BoldItalic.ttf
+        - asset: fonts/Cabin-Italic.ttf
+        - asset: fonts/Cabin-Medium.ttf
+        - asset: fonts/Cabin-MediumItalic.ttf
+        - asset: fonts/Cabin-SemiBold.ttf
+
+
+
 
   #   - family: Schyler
   #     fonts:
