--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,13 +45,14 @@ dependencies:
   flare_flutter: ^2.0.6
   flutter_page_indicator:   
   carousel_slider: ^2.3.1
+  flutter_statusbarcolor: ^0.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  flutter_test:
+  flutter_test: 
     sdk: flutter
   hive_generator: ^0.7.1
   build_runner:
@@ -70,6 +71,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/bottomNavBar/
+    - assets/profileTab/
     - animations/
     - icons/Brand.png 
     - images/emptycart.png
