--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_page_indicator:   
   carousel_slider: ^2.3.1
   flutter_statusbarcolor: ^0.2.3
+  transparent_image: ^1.0.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
