--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_statusbarcolor: ^0.2.3
   transparent_image: ^1.0.0
   random_color: ^1.0.5
+  photo_view: ^0.11.1
+  share: ^2.0.1
   
 
   cupertino_icons: ^0.1.3
