--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.nepek.www</string>
+	<string>com.nepek.nepek</string>
 	<key>PROJECT_ID</key>
 	<string>nepek-np</string>
 	<key>STORAGE_BUCKET</key>
