--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   firebase_performance: ^0.7.0+3
   firebase_crashlytics: ^2.0.4
   firebase_analytics: ^8.1.0
+  page_transition: ^2.0.2
 
   cupertino_icons: ^1.0.2
 
